# reposync

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst
src/reposync/: __init__.py  main.py
tests/: conftest.py  test_skeleton.py
