# packages = [{include = "reposync", from = "src"}]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/reposync"]

[project]
name = "reposync"
version = "0.3.2"
description = ""
authors = [
    {name = "Robin Bowes", email = "robin@yo61.com"},
]
dependencies = [
    "pygithub<2.0.0,>=1.58.0",
    "gitpython<4.0.0,>=3.1.31",
    "more-itertools<10.0.0,>=9.0.0",
    "setuptools<70.0.0,>=69.0.2",
]
requires-python = "<4.0,>=3.11"
readme = "README.md"
license = {text = "MIT"}


[project.scripts]
reposync = "reposync.main:run"
