# packages = [{include = "reposync", from = "src"}]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/reposync"]

[project]
name = "reposync"
version = "0.3.3"
description = """\
    A tool to help clone multiple github repositories and keep them updated.
"""
authors = [
    {name = "Robin Bowes", email = "robin@yo61.com"},
]
requires-python = "<4.0,>=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pygithub<2.0.0,>=1.58.0",
    "gitpython<4.0.0,>=3.1.31",
    "more-itertools<10.0.0,>=9.0.0",
    "setuptools<70.0.0,>=69.0.2",
]


[project.scripts]
reposync = "reposync.main:run"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
